# rustex

./: README.md
b1/: Cargo.toml
b1/c05/: Cargo.toml
b1/c06/: Cargo.toml
b1/c06/src/: main.rs
b1/c08/: Cargo.toml
b1/c08/src/: ex1.rs
b1/c11/adder/: Cargo.toml
b1/c11/adder/tests/common/: mod.rs
b1/c12/minigrep/: Cargo.toml
b1/c12/minigrep/src/: lib.rs  main.rs
b1/c16/: Cargo.toml
b1/c16/src/: main.rs
b1/c17/: Cargo.toml
b1/c17/src/: lib.rs  main.rs
b1/c18/patterns/: Cargo.toml
b1/c18/patterns/src/: main.rs
b1/c20/hello/: Cargo.toml  hello.html
b1/c20/hello/src/: lib.rs  main.rs
b1/guessing_game/: Cargo.toml
b1/guessing_game/src/: main.rs
b1/hello_cargo/: Cargo.toml
b1/restaurant/: Cargo.toml
b1/src/: main.rs
b2/c05/: Cargo.toml
b2/c05/src/: main.rs
b2/mandelbrot/: Cargo.toml
b2/mandelbrot/src/: main.rs
ch11/adder/src/: lib.rs
ch12/minigrep/: Cargo.toml  пушкин.txt
ch12/minigrep/src/: lib.rs  main.rs
ch8/src/: ex1.rs  ex2.rs  ex3.rs
mandelbrot/: Cargo.toml
mandelbrot/src/: main.rs
projecteuler.org/longint/: Cargo.toml
projecteuler.org/longint/src/: main.rs
