[package]
name = "ch8"
version = "0.1.0"
authors = ["Vlad Patryshev <vpatryshev@gmail.com>"]
edition = "2018"

[[bin]]
name = "ex1"
path = "src/ex1.rs"

[[bin]]
name = "ex2"
path = "src/ex2.rs"

[[bin]]
name = "ex3"
path = "src/ex3.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
