[package]
name = "mandelbrot"
version = "1.0.0"
authors = ["Vlad Patryshev <vpatryshev@gmail.com>"]
edition = "2018"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.2.0"
image = "0.22.2"
crossbeam = "0.7.2"


